Fixed that Yes/No buttons in the checkmark dialog got way too big on IE11 and iOS Safari

--- a/dev/scss/components/_buttons.scss
+++ b/dev/scss/components/_buttons.scss
@@ -121,6 +121,7 @@
     justify-content: center;
     align-items: center;
     min-width: 40px;
+    max-width: 40px;
     height: 40px;
     border-radius: 50%;
     background: $color-base-lighter-8;
